# tools

./: .gitignore  BMZ_1_LegendariesundArtefakte.mp3.vtt  LICENSE  README.md  SWIM_Stage_I.ipynb  SWIM_Stage_II.ipynb  extract_from_html.py  gorg.mp3.vtt  graphvizify.py  helper.py  import pytube.py  main.py  nlp.py  obsidize.py  playlist2wiki-converter.py  pyproject.toml  replace_literature.py  requirements.txt  spellcheck.py  test.ipynb  test.py  texify.py  titles  transcript.py  util_pdf.py  util_stanza.py
Helper files/: Proposal.md
ORKG/: bibtex_to_csv.py
bnw_tools/ORKG/: RF_Map.json  ResearchFields.json  bibtex_to_csv.py
bnw_tools/SLR/: builder.py  code_export.py  code_helper.py  config.py  export.py  obsidian.py  ontology.py  wikidata.py
bnw_tools/core/: helper.py
bnw_tools/extract/: extract_from_html.py  util_pdf.py  util_pytube.py  util_whisper.py  util_zotero.py
bnw_tools/publish/: util_networkx.py  util_pyplot.py  util_wordcloud.py
bnw_tools/review/: similaritiy.py  similarity.py  spellcheck.py  util_wordfreq.py
code/: main.py
config/: config.cfg
core/: helper.py
data/: README.md
data/sample/: _lexicon_ner.json  _lexicon_ner_full.json  _lexicon_ranked.json  episodes_info.json  playlist_info.json
extract/: extract_from_html.py  util_bibtex.py  util_pdf.py  util_pytube.py  util_whisper.py  util_zotero.py
extract/nlp/: my_stop_words.py  nlp.py  util_nlp.py
extract_from_html/: extract_from_html.py
helper/: helper.py
nlp/: nlp.py  util_stanza.py
obsidize/: obsidize.py
output/sample/: Therapist_Reacts_to_Everything_Everywhere_All_at_Once.mp3.vtt
pipelines/: whispered_folder.py
pipelines/L-SEARCH/: README.md
pipelines/SWIM/: SWIM.ipynb  Stage I.ipynb  Stage II.ipynb  Stage III.ipynb  Stage IV.ipynb
pipelines/bibtex_to_ORKG/: Bibtex_to_ORKG.py
pipelines/k_score/: README.md
publish/: createVTT.py  graphvizify.py  mediaWiki.py  obsidize.py  playlist2wiki-converter.py  replace_literature.py  texify.py  util_wordcloud.py  wordcloud.py
publish/MediaWiki/: playlist2wiki-converter.py
publish/Obsidian/: README.md  bibtex_to_notes.py  nlped_whispered_folder.py  obsidize.py  replace_literature.py
publish/wordcloud/: wordcloudMask.py  wordcloudPerEpisode.py
review/: k_score.py  similaritiy.py
scripts/: README.md  whispered_folder.py  wiki.py
scripts/SLR/: 00_ontology.ipynb  Overview.xlsx  Overview_subset.xlsx  README.md  co_occurence.ipynb  code.py  code_builder.py  code_config.py  code_export.py  code_helper.py  code_obsidian.py  code_ontology.py  code_orkg.py  code_wikidata.py  cross_type_rules.csv  data.csv  data_subset_overview.xlsx  error_matrix.csv  instance_instance_co_occurrence_matrix.csv  instance_proximinty_sankeysankey.html  instance_types_dicts.csv  onto.owl  paper_instance_occurrence_matrix.csv  proximity.csv  rules.csv  sankey.html  temp.py
scripts/SWARM-SLR/: README.md  SWARM-SLR_Stage_I.ipynb  SWARM-SLR_Stage_II.ipynb  SWARM-SLR_Stage_III.ipynb  SWARM-SLR_Stage_IV.ipynb
scripts/SWIM/: SWIM_Stage_I.ipynb  SWIM_Stage_II.ipynb  SWIM_Stage_IV.ipynb
scripts/bibtex_to_ORKG/: README.md  config sample.yml
scripts/config/: README.md
scripts/k_score/: config sample.yml  k_score_Zotero.py
spellcheck/: spellcheck.py
spellcheck/check/: barlow.py
src/: Done  extract_from_html.py  graphvizify.py  helper.py  main.py  mediaWiki.py  nlp.py  obsidize.py  playlist2wiki-converter.py  replace_literature.py  spellcheck.py  test.py  texify.py
src/spellcheck/: barlow.py  main.py
src/wiki/: barlow.py  main.py
src/wordcloud/: remapJson.py  wordcloudMask.py  (+1 more)
tests/: README.md  issues.txt  test.ipynb  test.py  test_nlp.py  test_viz.py
texify/: texify.py
wikify/: mediaWiki.py
wordcloud/: wordcloudPerEpisode.py
(+76 files in other folders)
